Ajustado texto responsivo

--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
                         <a href="./filme.html" class="absolute inset-0 bg-black bg-opacity-60"></a>
                         <img class="w-full h-auto" src="./assets/images/spiderManCover5.jpg" alt="Spider-Man: Across the Spider-Verse">
                         <div class="absolute bottom-0 left-0 p-4 text-white z-10">
-                            <div class="text-xl xl:text-3xl">Spider-Man: Across the Spider-Verse</div>
+                            <div class="text-xl 2xl:text-3xl">Spider-Man: Across the Spider-Verse</div>
                         </div>
                     </div>
                     <div class="relative rounded-3xl overflow-hidden">
                         <a href="./filme.html" class="absolute inset-0 bg-black bg-opacity-60"></a>
                         <img class="w-full h-auto" src="./assets/images/spiderManCover3.jpg" alt="Spider-Man: Across the Spider-Verse">
                         <div class="absolute bottom-0 left-0 p-4 text-white z-10">
-                            <a href="./filme.html" class="text-xl md:text-3xl">Spider-Man: Across the Spider-Verse</a>
+                            <a href="./filme.html" class="text-xl 2xl:text-3xl">Spider-Man: Across the Spider-Verse</a>
                         </div>
                     </div>
                     <div class="relative rounded-3xl overflow-hidden">
                         <a href="./filme.html" class="absolute inset-0 bg-black bg-opacity-60"></a>
                         <img class="w-full h-auto" src="./assets/images/spiderManCover2.jpg" alt="Spider-Man: Across the Spider-Verse">
                         <div class="absolute bottom-0 left-0 p-4 text-white z-10">
-                            <div class="text-xl md:text-3xl">Spider-Man: Across the Spider-Verse</div>
+                            <div class="text-xl 2xl:text-3xl">Spider-Man: Across the Spider-Verse</div>
                         </div>
                     </div>
                 </div>
