--- a/movies.html
+++ b/movies.html
@@ -51,28 +51,28 @@
       #action-movies {
         display: flex;
         gap: 1rem;
-        overflow-x: auto; /* Permitir rolagem horizontal */
-        white-space: nowrap; /* Impedir quebra de linha */
+        overflow-x: auto; 
+        white-space: nowrap; 
         width: calc(
           100vw + 3rem
-        ); /* Expandir para ocupar toda a largura visível e compensar o padding */
-        padding-left: 3rem; /* Adicionar o padding à esquerda */
-        padding-right: 3vw; /* Adicionar o padding à direita */
-        margin-left: calc(-50vw + 50%); /* Centralizar o contêiner */
-        scroll-behavior: smooth; /* Suavizar o scroll */
-        position: relative; /* Controle posicional */
+        ); 
+        padding-left: 3rem;
+        padding-right: 3vw;
+        margin-left: calc(-50vw + 50%); 
+        scroll-behavior: smooth; 
+        position: relative; 
       }
 
       #comedy-movies::-webkit-scrollbar,
       #horror-movies::-webkit-scrollbar,
       #drama-movies::-webkit-scrollbar,
       #action-movies::-webkit-scrollbar {
-        display: none; /* Ocultar barra de rolagem (opcional) */
+        display: none; 
       }
 
       .card {
-        flex-shrink: 0; /* Impedir que os itens encolham */
-        width: 200px; /* Definir a largura fixa dos itens */
+        flex-shrink: 0; 
+        width: 200px; 
       }
     </style>
   </head>
@@ -154,7 +154,6 @@
         <script>
           const searchInput = document.getElementById("search-input");
 
-          // Função debounce para evitar requisições excessivas
           function debounce(func, delay) {
             let timeout;
             return function (...args) {
@@ -163,7 +162,6 @@
             };
           }
 
-          // Função para buscar automaticamente enquanto o usuário digita
           function handleSearch(event) {
             const query = event.target.value.trim();
             if (query) {
@@ -173,7 +171,6 @@
             }
           }
 
-          // Adicionando o evento de escuta com debounce
           searchInput.addEventListener("input", debounce(handleSearch, 500));
         </script>
       </nav>
