--- a/movies.html
+++ b/movies.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmes - UFSCartaz</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
