--- a/movies.html
+++ b/movies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmes - UFSCartaz</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -52,28 +52,26 @@
       #action-movies {
         display: flex;
         gap: 1rem;
-        overflow-x: auto; 
-        white-space: nowrap; 
-        width: calc(
-          100vw + 3rem
-        ); 
+        overflow-x: auto;
+        white-space: nowrap;
+        width: calc(100vw + 3rem);
         padding-left: 3rem;
         padding-right: 3vw;
-        margin-left: calc(-50vw + 50%); 
-        scroll-behavior: smooth; 
-        position: relative; 
+        margin-left: calc(-50vw + 50%);
+        scroll-behavior: smooth;
+        position: relative;
       }
 
       #comedy-movies::-webkit-scrollbar,
       #horror-movies::-webkit-scrollbar,
       #drama-movies::-webkit-scrollbar,
       #action-movies::-webkit-scrollbar {
-        display: none; 
+        display: none;
       }
 
       .card {
-        flex-shrink: 0; 
-        width: 200px; 
+        flex-shrink: 0;
+        width: 200px;
       }
     </style>
   </head>
@@ -147,7 +145,7 @@
               type="text"
               id="search-input"
               class="bg-transparent pl-2 focus:outline-none text-gray-200 placeholder-gray-300"
-              placeholder="Buscar filme"
+              placeholder="Buscar"
             />
           </div>
         </div>
@@ -281,7 +279,7 @@
           const data = await response.json();
           displayContent(containerId, data.results);
         } catch (error) {
-          console.error("Erro ao buscar filmes:", error);
+          console.error("Erro ao Buscars:", error);
         }
       }
 
