Fix movie carousel

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="relative group">
           <button
             class="absolute left-4 top-1/2 z-10 bg-black bg-opacity-50 text-white p-2 w-10 h-10 rounded-full group-hover:bg-opacity-75"
-            onclick="scrollCarousel('popular-series', -1)"
+            onclick="scrollCarousel('popular-movies', -1)"
           >
             <i class="material-icons">chevron_left</i>
           </button>
@@ -256,7 +256,7 @@
           </div>
           <button
             class="absolute right-4 top-1/2 z-50 bg-black bg-opacity-50 text-white p-2 w-10 h-10 rounded-full group-hover:bg-opacity-75"
-            onclick="scrollCarousel('popular-series', 1)"
+            onclick="scrollCarousel('popular-movies', 1)"
           >
             <i class="material-icons">chevron_right</i>
           </button>
