--- a/details.html
+++ b/details.html
@@ -30,7 +30,7 @@
     </style>
   </head>
   <body
-    class="bg-[#141414] text-white overflow-x-hidden overflow-y-auto relative"
+    class="text-white overflow-x-hidden overflow-y-auto relative"
   >
     <div id="blur-overlay"></div>
     <header
