--- a/search-results.html
+++ b/search-results.html
@@ -50,7 +50,7 @@
   </head>
 
   <body
-    class="flex flex-col min-h-screen bg-[#141414] overflow-x-hidden overflow-y-auto"
+    class="flex flex-col min-h-screen bg-[url('./assets/images/bg-image.jpg')] bg-no-repeat bg-cover backdrop-blur-xl backdrop-brightness-75 overflow-x-hidden overflow-y-auto"
   >
     <header
       class="w-full flex flex-col md:flex-row items-center justify-between px-10 py-12 gap-4 text-white"
