--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </head>
 
   <body
-    class="flex flex-col min-h-screen bg-[#141414] overflow-x-hidden overflow-y-auto"
+    class="flex flex-col min-h-screen bg-[url('./assets/images/bg-image.jpg')] bg-no-repeat bg-cover backdrop-blur-xl backdrop-brightness-75 overflow-x-hidden overflow-y-auto"
   >
     <!-- Cabeçalho -->
     <header
